# jimaku

./: .gitignore  Cargo.toml  README.md  askama.toml  main.sql  rustfmt.toml
sql/: 0.sql  1.sql  2.sql  3.sql
src/: anilist.rs  audit.rs  auth.rs  borrowed.rs  buzzheavier.rs  cached.rs  cli.rs  config.rs  database.rs  discord.rs  download.rs  error.rs  filters.rs  fixture.rs  flash.rs  headers.rs  japanese.rs  jpsubbers.rs  key.rs  kitsunekko.rs  lib.rs  logging.rs  main.rs  models.rs  notification.rs  ratelimit.rs  referrer.rs  relations.rs  state.rs  tmdb.rs  token.rs  trash.rs  utils.rs
src/routes/: admin.rs  audit.rs  auth.rs  entry.rs  mod.rs  notification.rs  opensearch.rs  relations.rs  report.rs
src/routes/api/: auth.rs  entries.rs  mod.rs  utils.rs
static/: admin.css  admin.js  admin_scrapers.js  admin_trash.js  anilist.css  anilist.js  anitomy.js  anitomy_bg.js  anitomy_bg.wasm  api.css  api.js  audit.css  audit.js  auth.css  auth.js  base.css  base.js  base.min.js  entry.css  entry.js  entry_import.js  files.js  fuzzysort.min.js  help.css  index.js  index_import.js  notification.css  notification.js  report.css  report.js  robots.txt  zip.min.js
static/icons/: site.webmanifest
templates/: account.html  admin.html  admin_scrapers.html  admin_trash.html  anilist.html  api.html  api_description.md  audit.html  contact.html  entry.html  entry_import.html  error.html  help.html  index.html  layout.html  login.html  notification.html  reports.html
