[package]
name = "jimaku"
version = "0.1.0"
edition = "2021"
license = "AGPL-v3"
description = "A site to download Japanese subtitles"

[dev-dependencies]
divan = "0.1.14"

[dependencies]
anitomy = { git = "https://github.com/Rapptz/anitomy-rs/", version = "0.1.0" }
anyhow = "1.0.80"
argon2 = { version = "0.5.3", features = ["std"] }
askama = { version = "0.14", features = ["serde_json"] }
axum = { version = "0.8.4", features = ["multipart"] }
base64 = "0.22"
brotli = "3.4.0"
bytes = "1.5.0"
comrak = "0.40.0"
cookie = { version = "0.18.0", features = ["percent-encode"] }
crossbeam-channel = "0.5.11"
dirs = "5.0.1"
futures-util = "0.3.30"
getrandom = { version = "0.2.12", features = ["std"] }
hmac = "0.12.1"
hyper = { version = "1.3.1", features = ["full"] }
hyper-util = { version = "0.1.3", features = ["server-auto"] }
percent-encoding = "2.3.1"
pin-project-lite = "0.2.13"
quick_cache = "0.4.1"
regex = "1.10.3"
reqwest = { version = "0.12.3", default-features = false, features = ["json", "rustls-tls"] }
rpassword = "7.3.1"
rusqlite = { version = "0.31.0", features = ["bundled", "time", "vtab", "array"] }
rustls-acme = { git = "https://github.com/Rapptz/rustls-acme/", branch = "update-deps", features = ["tokio"] }
sanitise-file-name = "1.0.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
sha2 = "0.10.8"
socket2 = "0.5.10"
strsim = "0.11.0"
sublime_fuzzy = "0.7.0"
time = { version = "0.3.34", features = ["macros", "serde-human-readable"] }
tokio = { version = "1.36.0", features = ["full"] }
tokio-rustls = "0.25"
tower = { version = "0.4.13", features = ["limit", "util"] }
tower-http = { version = "0.5.2", features = ["fs", "timeout", "normalize-path", "limit", "cors", "compression-full"] }
tracing = "0.1.40"
tracing-appender = { git = "https://github.com/Rapptz/tracing-appender" }
tracing-subscriber = { version = "0.3.18", features = ["json"] }
utoipa = { version = "4.2.0", features = ["time", "axum_extras", "repr", "preserve_path_order"] }
zip = "0.6.6"
